--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,1 +1,20 @@
+nav h1 {
+  color: blue;
+  font-weight: bold;
+  flex-grow: 1; /* Permet au titre de prendre de l'espace */
+  text-align: center; /* Centre le texte */
+}
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  height: 20vh;
+  background-color: rgb(247, 244, 250);
+}
+
+nav img {
+  height: auto;
+  width: 200px;
+}
