--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,11 +9,11 @@ footer {
   text-align: center;
   justify-content: space-between;
 }
-
-img {
+#logoSocial img {
   width: 3vw;
   padding: 0.5vw;
 }
+
 a {
   padding: 1vw;
 }
